NMS-10 handling frontlineworkerCSV
code changes to add data from csv tp permanent table

--- a/frontlineworker/pom.xml
+++ b/frontlineworker/pom.xml
@@ -25,6 +25,19 @@
             <version>${motech.version}</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.motechproject.nms</groupId>
+            <artifactId>util</artifactId>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.motechproject.nms.masterdata</groupId>
+            <artifactId>masterdata</artifactId>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
+
         <!-- OSGi IT -->
         <dependency>
             <groupId>org.motechproject</groupId>
