--- a/frontlineworker/pom.xml
+++ b/frontlineworker/pom.xml
@@ -33,7 +33,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.motechproject.nms.masterdata</groupId>
+            <groupId>org.motechproject.nms</groupId>
             <artifactId>masterdata</artifactId>
             <version>0.1-SNAPSHOT</version>
         </dependency>
