--- a/mobilekunji/pom.xml
+++ b/mobilekunji/pom.xml
@@ -81,8 +81,8 @@
                 <configuration>
                     <instructions>
                         <Blueprint-Enabled>true</Blueprint-Enabled>
-                        <Resource-Path>kunji/resources</Resource-Path>
-                        <Context-Path>kunji</Context-Path>
+                        <Resource-Path>mobilekunji/resources</Resource-Path>
+                        <Context-Path>mobilekunji</Context-Path>
                         <Export-Package>org.motechproject.nms.mobilekunji;version=${project.version},
                             org.motechproject.nms.mobilekunji.service;version=${project.version},
                             org.motechproject.nms.mobilekunji.repository;version=${project.version},
