--- a/frontlineworker/pom.xml
+++ b/frontlineworker/pom.xml
@@ -9,10 +9,10 @@
         <relativePath>../</relativePath>
     </parent>
 
-    <artifactId>flw</artifactId>
+    <artifactId>frontlineworker</artifactId>
     <version>0.1-SNAPSHOT</version>
     <packaging>bundle</packaging>
-    <name>FLW module</name>
+    <name>frontlineworker</name>
 
     <properties>
         <modules.root.dir>${basedir}/..</modules.root.dir>
@@ -69,11 +69,11 @@
                 <configuration>
                     <instructions>
                         <Blueprint-Enabled>true</Blueprint-Enabled>
-                        <Resource-Path>flw/resources</Resource-Path>
-                        <Context-Path>flw</Context-Path>
-                        <Export-Package>org.motechproject.nms.flw.service;version=${project.version},
-                            org.motechproject.nms.flw.repository;version=${project.version},
-                            org.motechproject.nms.flw.domain;version=${project.version},</Export-Package>
+                        <Resource-Path>frontlineworker/resources</Resource-Path>
+                        <Context-Path>frontlineworker</Context-Path>
+                        <Export-Package>org.motechproject.nms.frontlineworker.service;version=${project.version},
+                            org.motechproject.nms.frontlineworker.repository;version=${project.version},
+                            org.motechproject.nms.frontlineworker.domain;version=${project.version},</Export-Package>
                         <Import-Package>org.motechproject.osgi.web,
                             *</Import-Package>
                     </instructions>
