NMS-10 parent pom updated

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 
     <properties>
         <motech.groupId>org.motechproject</motech.groupId>
-        <motech.version>0.26-SNAPSHOT</motech.version>
+        <motech.version>0.25-SNAPSHOT</motech.version>
 
         <jasmine.server.port>8234</jasmine.server.port>
 
@@ -687,10 +687,12 @@
     </dependencyManagement>
     
     <modules>
-        <module>academy</module>
+        <module>mobileacademy</module>
         <module>flw</module>
         <module>kilkari</module>
-        <module>kunji</module>        
+        <module>mobilekunji</module>        
+        <module>util</module>        
+        <module>masterdata</module>        
     </modules>
 
     <build>
