--- a/mobileacademy/pom.xml
+++ b/mobileacademy/pom.xml
@@ -21,7 +21,7 @@
         <sonar.jdbc.driverClassName>com.mysql.jdbc.Driver</sonar.jdbc.driverClassName>
         <sonar.jdbc.username>sonar</sonar.jdbc.username>
         <sonar.jdbc.password>sonar</sonar.jdbc.password>
-       <sonar.host.url>http://localhost:9002/</sonar.host.url>
+       <sonar.host.url>http://10.204.23.138:9002/</sonar.host.url>
    </properties>
 
     <dependencies>
