--- a/mobileacademy/pom.xml
+++ b/mobileacademy/pom.xml
@@ -13,6 +13,11 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <motech.version>0.25-SNAPSHOT</motech.version>
         <spring.version>3.1.0.RELEASE</spring.version>
+	 <sonar.jdbc.url>jdbc:mysql://localhost:3306/sonar?useUnicode=true&amp;characterEncoding=utf8</sonar.jdbc.url>
+        <sonar.jdbc.driverClassName>com.mysql.jdbc.Driver</sonar.jdbc.driverClassName>
+        <sonar.jdbc.username>sonar</sonar.jdbc.username>
+        <sonar.jdbc.password>sonar</sonar.jdbc.password>
+       <sonar.host.url>http://10.204.23.138:9002/</sonar.host.url>
     </properties>
 
     <dependencies>
@@ -208,6 +213,10 @@
                     </execution>
                 </executions>
             </plugin>
+	   <plugin>
+             <groupId>org.codehaus.mojo</groupId>
+             <artifactId>sonar-maven-plugin</artifactId>
+          </plugin>
         </plugins>
     </build>
 
