NMS-14, NMS-15 added java docs and null checks
Added java docs for public method and class and put null checks.

--- a/masterdata/pom.xml
+++ b/masterdata/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.motechproject.nms.masterdata</groupId>
@@ -150,7 +151,8 @@
                         <Resource-Path>masterdata/resources</Resource-Path>
                         <Export-Package>org.motechproject.nms.masterdata.service;version=${project.version},
                             org.motechproject.nms.masterdata.repository;version=${project.version},
-                            org.motechproject.nms.masterdata.domain;version=${project.version},</Export-Package>
+                            org.motechproject.nms.masterdata.domain;version=${project.version},
+                        </Export-Package>
                         <Import-Package>*</Import-Package>
                     </instructions>
                 </configuration>
