--- a/util/pom.xml
+++ b/util/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -73,9 +74,11 @@
                         <Context-Path>util</Context-Path>
                         <Export-Package>org.motechproject.nms.util.service;version=${project.version},
                             org.motechproject.nms.util.repository;version=${project.version},
-                            org.motechproject.nms.util.domain;version=${project.version},</Export-Package>
+                            org.motechproject.nms.util.domain;version=${project.version},
+                        </Export-Package>
                         <Import-Package>org.motechproject.osgi.web,
-                            *</Import-Package>
+                            *
+                        </Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
