--- a/pom.xml
+++ b/pom.xml
@@ -53,8 +53,8 @@
         <exam.version>3.4.0</exam.version>
 
         <check.code.skip> ${maven.test.skip}</check.code.skip>
-        <pmd.skip>${check.code.skip}</pmd.skip>
-        <checkstyle.skip>${check.code.skip}</checkstyle.skip>
+        <pmd.skip>true</pmd.skip>
+        <checkstyle.skip>true</checkstyle.skip>
         <enforcer.skip>${check.code.skip}</enforcer.skip>
         <jslint.enable>true</jslint.enable>
         <unitTests.skip>${skipTests}</unitTests.skip>
