--- a/mobileacademy/pom.xml
+++ b/mobileacademy/pom.xml
@@ -187,7 +187,10 @@
                         <Context-Path>mobileacademy</Context-Path>
                         <Export-Package>org.motechproject.nms.mobileacademy.service;version=${project.version},
                             org.motechproject.nms.mobileacademy.repository;version=${project.version},
-                            org.motechproject.nms.mobileacademy.domain;version=${project.version},</Export-Package>
+                            org.motechproject.nms.mobileacademy.commons;version=${project.version},
+                            org.motechproject.nms.mobileacademy.util;version=${project.version},
+                            org.motechproject.nms.mobileacademy.domain;version=${project.version},
+ 						</Export-Package>
                         <Import-Package>org.motechproject.osgi.web,
                             *</Import-Package>
                     </instructions>
