--- a/mobilekunji/pom.xml
+++ b/mobilekunji/pom.xml
@@ -32,6 +32,11 @@
             <version>0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.motechproject.nms</groupId>
+            <artifactId>masterdata</artifactId>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
         <!-- OSGi IT -->
         <dependency>
             <groupId>org.motechproject</groupId>
