--- a/mobilekunji/pom.xml
+++ b/mobilekunji/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>mobilekunji</artifactId>
     <version>0.1-SNAPSHOT</version>
     <packaging>bundle</packaging>
-    <name>Kunji module</name>
+    <name>mobilekunji</name>
 
     <properties>
         <modules.root.dir>${basedir}/..</modules.root.dir>
