NMS -8,9,10 Resolving error
Resolving error

--- a/frontlineworker/pom.xml
+++ b/frontlineworker/pom.xml
@@ -85,7 +85,8 @@
                         <Blueprint-Enabled>true</Blueprint-Enabled>
                         <Resource-Path>frontlineworker/resources</Resource-Path>
                         <Context-Path>frontlineworker</Context-Path>
-                        <Export-Package>org.motechproject.nms.frontlineworker.repository;version=${project.version},
+                        <Export-Package>org.motechproject.nms.frontlineworker;version=${project.version},
+                            org.motechproject.nms.frontlineworker.repository;version=${project.version},
                             org.motechproject.nms.frontlineworker.domain;version=${project.version},</Export-Package>
                         <Import-Package>org.motechproject.osgi.web,
                             *</Import-Package>
