NMS -8, 10 Resolving errors
Resolving errors

--- a/frontlineworker/pom.xml
+++ b/frontlineworker/pom.xml
@@ -87,9 +87,11 @@
                         <Context-Path>frontlineworker</Context-Path>
                         <Export-Package>org.motechproject.nms.frontlineworker;version=${project.version},
                             org.motechproject.nms.frontlineworker.repository;version=${project.version},
-                            org.motechproject.nms.frontlineworker.domain;version=${project.version},</Export-Package>
+                            org.motechproject.nms.frontlineworker.domain;version=${project.version},
+                        </Export-Package>
                         <Import-Package>org.motechproject.osgi.web,
-                            *</Import-Package>
+                            *
+                        </Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
