--- a/kilkari/pom.xml
+++ b/kilkari/pom.xml
@@ -85,7 +85,8 @@
 						<Blueprint-Enabled>true</Blueprint-Enabled>
 						<Resource-Path>kilkari/resources</Resource-Path>
 						<Context-Path>kilkari</Context-Path>
-						<Export-Package>org.motechproject.nms.kilkari.service;version=${project.version},
+						<Export-Package>org.motechproject.nms.kilkari;version=${project.version},
+                            org.motechproject.nms.kilkari.service;version=${project.version},
 							org.motechproject.nms.kilkari.repository;version=${project.version},
 							org.motechproject.nms.kilkari.domain;version=${project.version},</Export-Package>
 						<Import-Package>org.motechproject.osgi.web,
