--- a/kilkari/pom.xml
+++ b/kilkari/pom.xml
@@ -53,6 +53,13 @@
 			<artifactId>motech-platform-dataservices</artifactId>
 			<version>${motech.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>net.sf.opencsv</groupId>
+			<artifactId>opencsv</artifactId>
+			<version>2.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<repositories>
@@ -85,7 +92,7 @@
 						<Blueprint-Enabled>true</Blueprint-Enabled>
 						<Resource-Path>kilkari/resources</Resource-Path>
 						<Context-Path>kilkari</Context-Path>
-						<Export-Package>org.motechproject.nms.kilkari;version=${project.version},
+						<Export-Package>org.motechproject.nms.kilkari.event.handler;version=${project.version},
                             org.motechproject.nms.kilkari.service;version=${project.version},
 							org.motechproject.nms.kilkari.repository;version=${project.version},
 							org.motechproject.nms.kilkari.domain;version=${project.version},</Export-Package>
