--- a/masterdata/pom.xml
+++ b/masterdata/pom.xml
@@ -78,7 +78,8 @@
 						<Blueprint-Enabled>true</Blueprint-Enabled>
 						<Resource-Path>masterdata/resources</Resource-Path>
 						<Context-Path>masterdata</Context-Path>
-						<Export-Package>org.motechproject.nms.masterdata.service;version=${project.version},
+						<Export-Package>org.motechproject.nms.masterdata.event.handler;version=${project.version},
+							org.motechproject.nms.masterdata.service;version=${project.version},
 							org.motechproject.nms.masterdata.repository;version=${project.version},
 							org.motechproject.nms.masterdata.domain;version=${project.version},</Export-Package>
 						<Import-Package>org.motechproject.osgi.web,
