--- a/masterdata/src/test/resources/bootstrap.properties
+++ b/masterdata/src/test/resources/bootstrap.properties
@@ -1,6 +1,6 @@
 sql.url=jdbc:mysql://localhost:3306/
 sql.user=root
-sql.password=abhishek
+sql.password=password
 sql.driver=com.mysql.jdbc.Driver
 tenant.id=mtenant
 config.source=FILE
