--- a/maven.properties
+++ b/maven.properties
@@ -1,6 +1,6 @@
 #sql
 motech.sql.user=root
-motech.sql.password=abc123
+motech.sql.password=password
 motech.sql.driver=com.mysql.jdbc.Driver
 motech.sql.url=jdbc:mysql://localhost:3306/
 
