--- a/mobileacademy/pom.xml
+++ b/mobileacademy/pom.xml
@@ -18,14 +18,6 @@
 
 	<properties>
 		<modules.root.dir>${basedir}/..</modules.root.dir>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<motech.version>0.25-SNAPSHOT</motech.version>
-		<spring.version>3.1.0.RELEASE</spring.version>
-		<!-- <sonar.jdbc.url>jdbc:mysql://localhost:3306/sonar?useUnicode=true&amp;characterEncoding=utf8</sonar.jdbc.url>
-		<sonar.jdbc.driverClassName>com.mysql.jdbc.Driver</sonar.jdbc.driverClassName>
-		<sonar.jdbc.username>sonar</sonar.jdbc.username>
-		<sonar.jdbc.password>sonar</sonar.jdbc.password>
-		<sonar.host.url>http://10.204.23.138:9002/</sonar.host.url> -->
 	</properties>
 
 	<dependencies>
@@ -59,86 +51,6 @@
 			<version>1.3.2</version>
 		</dependency>
 
-		<!-- SLF4J -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>1.7.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jcl-over-slf4j</artifactId>
-			<version>1.7.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.2</version>
-		</dependency>
-		<!-- Log4J -->
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-		</dependency>
-
-		<!-- Spring -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>org.springframework.core</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>org.springframework.beans</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>org.springframework.context</artifactId>
-			<version>${spring.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.apache.commons</groupId>
-					<artifactId>com.springsource.org.apache.commons.logging</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>org.springframework.context.support</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>org.springframework.aop</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<!-- HTTP -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>org.springframework.web.servlet</artifactId>
-			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.motechproject</groupId>
-			<artifactId>motech-platform-osgi-web-util</artifactId>
-			<version>${motech.version}</version>
-		</dependency>
-
-		<!-- HTTP IT -->
-		<dependency>
-			<groupId>org.motechproject</groupId>
-			<artifactId>motech-testing-utils</artifactId>
-			<version>${motech.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.motechproject</groupId>
-			<artifactId>motech-platform-server-config</artifactId>
-			<version>${motech.version}</version>
-			<scope>test</scope>
-		</dependency>
 		<!-- Repository -->
 		<dependency>
 			<groupId>org.motechproject</groupId>
@@ -160,6 +72,12 @@
 			<artifactId>util</artifactId>
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      
+    </dependency>
 	</dependencies>
 
 	<repositories>
@@ -231,97 +149,4 @@
 		</plugins>
 	</build>
 
-	<profiles>
-		<profile>
-			<id>IT</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-resources-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>copy-test-config-files</id>
-								<phase>pre-integration-test</phase>
-								<goals>
-									<goal>copy-resources</goal>
-								</goals>
-								<configuration>
-									<outputDirectory>${user.home}/.motech/config</outputDirectory>
-									<resources>
-										<resource>
-											<directory>${basedir}/src/test/resources/</directory>
-											<include>bootstrap.properties</include>
-											<include>motech-settings.properties</include>
-										</resource>
-									</resources>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<version>2.17</version>
-						<configuration>
-							<encoding>UTF-8</encoding>
-							<forkCount>1</forkCount>
-							<reuseForks>false</reuseForks>
-						</configuration>
-						<executions>
-							<execution>
-								<id>integration-test</id>
-								<goals>
-									<goal>integration-test</goal>
-								</goals>
-								<configuration>
-									<encoding>UTF-8</encoding>
-									<includes>
-										<include>**/*IntegrationTests.java</include>
-									</includes>
-								</configuration>
-							</execution>
-							<execution>
-								<id>verify</id>
-								<goals>
-									<goal>verify</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-dependency-plugin</artifactId>
-						<version>2.8</version>
-						<executions>
-							<execution>
-								<id>copy-osgi-dependencies</id>
-								<goals>
-									<goal>copy-dependencies</goal>
-								</goals>
-								<configuration>
-									<includeScope>runtime</includeScope>
-									<overWriteIfNewer>true</overWriteIfNewer>
-									<excludeArtifactIds>org.apache.felix.framework</excludeArtifactIds>
-									<outputDirectory>${user.home}/.motech/bundles</outputDirectory>
-								</configuration>
-							</execution>
-							<execution>
-								<id>list-dependencies</id>
-								<phase>generate-sources</phase>
-								<goals>
-									<goal>resolve</goal>
-								</goals>
-								<configuration>
-									<outputFile>target/dependencies.list</outputFile>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 </project>
