--- a/masterdata/pom.xml
+++ b/masterdata/pom.xml
@@ -80,6 +80,7 @@
 						<Context-Path>masterdata</Context-Path>
 						<Export-Package>org.motechproject.nms.masterdata.event.handler;version=${project.version},
 							org.motechproject.nms.masterdata.service;version=${project.version},
+							org.motechproject.nms.masterdata.service.impl;version=${project.version},
 							org.motechproject.nms.masterdata.repository;version=${project.version},
 							org.motechproject.nms.masterdata.domain;version=${project.version},</Export-Package>
 						<Import-Package>org.motechproject.osgi.web,
