NMS-18 MK Init updated

--- a/mobilekunji/pom.xml
+++ b/mobilekunji/pom.xml
@@ -86,6 +86,7 @@
                         <Export-Package>org.motechproject.nms.mobilekunji;version=${project.version},
                             org.motechproject.nms.mobilekunji.service;version=${project.version},
                             org.motechproject.nms.mobilekunji.repository;version=${project.version},
+                            org.motechproject.nms.mobilekunji.constants;version=${project.version},
                             org.motechproject.nms.mobilekunji.domain;version=${project.version},
                         </Export-Package>
                         <Import-Package>org.motechproject.osgi.web,
