--- a/pom.xml
+++ b/pom.xml
@@ -773,7 +773,6 @@
                             <propertyName>jacoco.agent.arg-ut</propertyName>
                         </configuration>
                     </execution>
-
                     <execution>
                         <id>generate-unit-test-report</id>
                         <goals>
@@ -782,10 +781,6 @@
                     </execution>
                 </executions>
             </plugin>
-
-
-
-
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>properties-maven-plugin</artifactId>
@@ -1037,6 +1032,11 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-failsafe-plugin</artifactId>
+                        <configuration>
+                            <encoding>UTF-8</encoding>
+                            <forkCount>1</forkCount>
+                            <reuseForks>false</reuseForks>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>integration-test</id>
