--- a/mobileacademy/pom.xml
+++ b/mobileacademy/pom.xml
@@ -73,6 +73,11 @@
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>org.motechproject.nms</groupId>
+			<artifactId>masterdata</artifactId>
+			<version>0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
