--- a/testdata/mysql/bootstrap.properties
+++ b/testdata/mysql/bootstrap.properties
@@ -1,6 +1,6 @@
-sql.url=jdbc:mysql://localhost:3306/
+ sql.url=jdbc:mysql://localhost:3306/
 sql.user=root
-sql.password=abhishek
+sql.password=password
 tenant.id=mtenant
 config.source=FILE
 sql.driver=com.mysql.jdbc.Driver
