--- a/masterdata/pom.xml
+++ b/masterdata/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
@@ -82,9 +82,11 @@
                             org.motechproject.nms.masterdata.service;version=${project.version},
                             org.motechproject.nms.masterdata.service.impl;version=${project.version},
                             org.motechproject.nms.masterdata.repository;version=${project.version},
-                            org.motechproject.nms.masterdata.domain;version=${project.version},</Export-Package>
+                            org.motechproject.nms.masterdata.domain;version=${project.version},
+                        </Export-Package>
                         <Import-Package>org.motechproject.osgi.web,
-                            *</Import-Package>
+                            *
+                        </Import-Package>
                     </instructions>
                 </configuration>
             </plugin>
