--- a/mobileacademy/pom.xml
+++ b/mobileacademy/pom.xml
@@ -115,6 +115,7 @@
 							org.motechproject.nms.mobileacademy.repository;version=${project.version},
 							org.motechproject.nms.mobileacademy.commons;version=${project.version},
 							org.motechproject.nms.mobileacademy.domain;version=${project.version},
+							org.motechproject.nms.mobileacademy.logic;version=${project.version},
 						</Export-Package>
 						<Import-Package>org.motechproject.osgi.web,
 							*</Import-Package>
