--- a/frontlineworker/pom.xml
+++ b/frontlineworker/pom.xml
@@ -90,6 +90,7 @@
                             <!-- Bug 17 -->
                             org.motechproject.nms.frontlineworker.event.handler;version=${project.version},
                             org.motechproject.nms.frontlineworker.domain;version=${project.version},
+                            org.motechproject.nms.frontlineworker.service;version=${project.version},
                         </Export-Package>
                         <Import-Package>org.motechproject.osgi.web,
                             *
