--- a/mobilekunji/pom.xml
+++ b/mobilekunji/pom.xml
@@ -92,6 +92,7 @@
                             org.motechproject.nms.mobilekunji.constants;version=${project.version},
                             org.motechproject.nms.mobilekunji.event.handler;version=${project.version},<!-- Bug 18 -->
                             org.motechproject.nms.mobilekunji.domain;version=${project.version},
+                            org.motechproject.nms.mobilekunji.web;version=${project.version},
                         </Export-Package>
                         <Import-Package>org.motechproject.osgi.web,
                             *
