--- a/mobilekunji/pom.xml
+++ b/mobilekunji/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>masterdata</artifactId>
             <version>0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.motechproject.nms</groupId>
+            <artifactId>frontlineworker</artifactId>
+            <version>0.1-SNAPSHOT</version>
+        </dependency>
         <!-- OSGi IT -->
         <dependency>
             <groupId>org.motechproject</groupId>
