Removed NMSkk from variable names in configuration class.

--- a/kilkari/pom.xml
+++ b/kilkari/pom.xml
@@ -93,6 +93,7 @@
 						<Resource-Path>kilkari/resources</Resource-Path>
 						<Context-Path>kilkari</Context-Path>
 						<Export-Package>org.motechproject.nms.kilkari;version=${project.version},
+							org.motechproject.nms.kilkari.initializer;version=${project.version},
 							org.motechproject.nms.kilkari.event.handler;version=${project.version},
                             org.motechproject.nms.kilkari.service;version=${project.version},
 							org.motechproject.nms.kilkari.repository;version=${project.version},
