--- a/util/pom.xml
+++ b/util/pom.xml
@@ -72,7 +72,7 @@
                         <Blueprint-Enabled>true</Blueprint-Enabled>
                         <Resource-Path>util/resources</Resource-Path>
                         <Context-Path>util</Context-Path>
-                        <Export-Package>org.motechproject.nms.util;version=${project.version},
+                        <Export-Package>
                             org.motechproject.nms.util.service;version=${project.version},
                             org.motechproject.nms.util.repository;version=${project.version},
                             org.motechproject.nms.util.domain;version=${project.version},
