Added IT test cases in kilkali module

--- a/kilkari/pom.xml
+++ b/kilkari/pom.xml
@@ -94,6 +94,10 @@
                         <Context-Path>kilkari</Context-Path>
                         <Export-Package>
                             org.motechproject.nms.kilkari.initializer;version=${project.version},
+                            org.motechproject.nms.kilkari.web;version=${project.version},
+                            org.motechproject.nms.kilkari.dto.request;version=${project.version},
+                            org.motechproject.nms.kilkari.dto.response;version=${project.version},
+                            org.motechproject.nms.kilkari.commons;version=${project.version},
                             org.motechproject.nms.kilkari.event.handler;version=${project.version},
                             org.motechproject.nms.kilkari.service;version=${project.version},
                             org.motechproject.nms.kilkari.repository;version=${project.version},
