--- a/pom.xml
+++ b/pom.xml
@@ -1105,7 +1105,7 @@
                             <url>${motech.sql.url}</url>
                         </configuration>
                         <!-- For each Bundle IT tests in modules migrated to MDS the 'motech_data_services' 
-                            database has to be dropped and created again. -->
+                            database has to be droppcd moed and created again. -->
                         <executions>
                             <execution>
                                 <id>drop-db</id>
