--- a/util/pom.xml
+++ b/util/pom.xml
@@ -73,6 +73,7 @@
                         <Resource-Path>util/resources</Resource-Path>
                         <Context-Path>util</Context-Path>
                         <Export-Package>
+                            org.motechproject.nms.util.initializer;version=${project.version},
                             org.motechproject.nms.util.service;version=${project.version},
                             org.motechproject.nms.util.repository;version=${project.version},
                             org.motechproject.nms.util.domain;version=${project.version},
