MA GetUserAPI SetLLcAPI
Added UT for Controller

--- a/mobileacademy/pom.xml
+++ b/mobileacademy/pom.xml
@@ -83,6 +83,31 @@
       <version>4.11</version>
       
     </dependency>
+        <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test-mvc</artifactId>
+                <version>1.0.0.M1</version>
+                <scope>test</scope>
+                <!-- excluding bundle dependencies so they won't be loaded in BundleITs -->
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-context</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-webmvc</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring-test</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.hamcrest</groupId>
+                        <artifactId>hamcrest-library</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
     </dependencies>
 
     <repositories>
