implement scp logic, cdrfilenotification api invoked by ivr, service classes.

--- a/kilkariobd/pom.xml
+++ b/kilkariobd/pom.xml
@@ -27,6 +27,12 @@
             <version>0.1.51</version>
         </dependency>
         <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.motechproject</groupId>
             <artifactId>motech-platform-osgi-extender-fragment</artifactId>
             <version>${motech.version}</version>
