--- a/kilkariobd/pom.xml
+++ b/kilkariobd/pom.xml
@@ -72,7 +72,12 @@
             <version>2.0</version>
             <scope>test</scope>
         </dependency>
-        
+        <dependency>
+            <groupId>org.motechproject</groupId>
+            <artifactId>motech-scheduler</artifactId>
+            <version>0.25-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <repositories>
