--- a/mobileacademy/pom.xml
+++ b/mobileacademy/pom.xml
@@ -147,6 +147,7 @@
                             org.motechproject.nms.mobileacademy.domain;version=${project.version},
                             org.motechproject.nms.mobileacademy.logic;version=${project.version},
                             org.motechproject.nms.mobileacademy.initializer;version=${project.version},
+                            org.motechproject.nms.mobileacademy.dto;version=${project.version},
                         </Export-Package>
                         <Import-Package>org.motechproject.osgi.web,
                             *</Import-Package>
