remove MA and KK from 1504MK branch

--- a/pom.xml
+++ b/pom.xml
@@ -693,9 +693,9 @@
     </dependencyManagement>
     
     <modules>
-        <module>mobileacademy</module>
+        <!--<module>mobileacademy</module>-->
         <module>frontlineworker</module>
-        <module>kilkari</module>
+        <!--<module>kilkari</module>-->
         <module>mobilekunji</module>        
         <module>util</module>        
         <module>masterdata</module>        
