Incorporate review comments and code refactored.

--- a/kilkariobd/src/main/resources/kilkariobd.properties
+++ b/kilkariobd/src/main/resources/kilkariobd.properties
@@ -6,6 +6,7 @@ offlineApiRetryMultiplier = 2
 # OBD preparation and scp parameters
 obdFileLocalPath = /tmp
 sshPrivateKeyFile = ~/.ssh/id_rsa
+sshLocalUsername = username
 
 
 
